--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -13,35 +13,27 @@ icons.css">
 <body>
 <nav class="navbar navbar-expand-lg bg-dark" data-bs-theme="dark">
   <div class="container-fluid">
-    <a class="navbar-brand" href="{{path('app_accueil')}}">Cactus Jack</a>
+  <a href='{{path('app_accueil')}}'>
+  <img src="{{asset('img/utopia3d.gif')}}" width=100px title="aller a l'accueil"/>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor02" aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarColor02">
       <ul class="navbar-nav me-auto">
         <li class="nav-item">
-          <a class="nav-link active" href="{{path('app_accueil')}}">Home
-            <span class="visually-hidden">(current)</span>
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Features</a>
+         <a class="nav-link" href="{{path('app_contact')}}">Contact</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Pricing</a>
+          <a class="nav-link" href="/shop">Shop</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">About</a>
+          <a class="nav-link" href="/album">Album</a>
         </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Dropdown</a>
-          <div class="dropdown-menu">
-            <a class="dropdown-item" href="#">Action</a>
-            <a class="dropdown-item" href="#">Another action</a>
-            <a class="dropdown-item" href="#">Something else here</a>
-            <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="#">Separated link</a>
-          </div>
+        <li class="nav-item">
+          <a class="nav-link" href="/concert">Concert</a>
         </li>
       </ul>
       <form class="d-flex">
@@ -51,6 +43,11 @@ icons.css">
     </div>
   </div>
 </nav>
+{% for message in app.flashes('notice') %}
+<h2 class="alert alert-warning text-center mt-4 mb-4" role="alert">
+{{ message }}
+</h2>
+{% endfor %}
 {% block body %}cactusjack{% endblock %}
 {% block javascripts %}
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
