--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -43,6 +43,27 @@ icons.css">
     </div>
   </div>
 </nav>
+<div id="carouselExampleFade" class="carousel slide carousel-fade">
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img src="img/fragment.webp" class="d-block w-60"  alt="Image de la Air Jordan 1 Low ">
+    </div>
+    <div class="carousel-item">
+      <img src="img/Jordan1travisscott.webp" class="d-block w-60" alt="Jodan 1 Travis scott">
+    </div>
+    <div class="carousel-item">
+      <img src="img/phantom.webp" class="d-block w-60" alt="Jordan 1 low black phantom">
+    </div>
+  </div>
+  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Previous</span>
+  </button>
+  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Next</span>
+  </button>
+</div>
 {% for message in app.flashes('notice') %}
 <h2 class="alert alert-warning text-center mt-4 mb-4" role="alert">
 {{ message }}
